# rust-idm

./: Cargo.toml  LICENSE  README.md
migrations/: 0001_init_idm.down.sql  0001_init_idm.up.sql  0002_add_roles.down.sql  0002_add_roles.up.sql
src/: audit.rs  clock.rs  error.rs  extract.rs  identity.rs  input.rs  jwt.rs  lib.rs  middleware.rs  password.rs  routes.rs  service.rs  state.rs  token.rs  types.rs
src/repo/: memory.rs  mod.rs  postgres.rs
tests/: idm_api.rs  idm_repo_conformance.rs
