# idm —— 自包含的认证服务 crate(领域 + HTTP + 自带 IdmError/audit)。
# 被 app 当 lib 依赖,也能独立 oneshot 测试 / 分进程部署。迁移表见 migrations/。
[package]
name = "idm"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Self-contained auth / IDM crate for axum: domain + HTTP + its own IdmError, oneshot-testable, embeddable in an app or deployable standalone."
license = "MIT"
repository = "https://github.com/GGGLHHH/rust-idm"
keywords = ["axum", "auth", "idm", "jwt", "authentication"]
categories = ["authentication", "web-programming"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }

utoipa = { version = "5", features = ["axum_extras", "uuid", "time"] }
utoipa-axum = "0.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
garde = { version = "0.23", features = ["derive", "email"] }

tracing = "0.1"
thiserror = "2"
anyhow = "1"

sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "macros", "time", "migrate"] }
sea-query = "1.0"
sea-query-sqlx = { version = "0.9", default-features = false, features = ["sqlx-postgres", "runtime-tokio", "tls-rustls", "with-uuid", "with-time"] }
async-trait = "0.1"

uuid = { version = "1", features = ["v4", "v7", "serde"] }
time = { version = "0.3", features = ["serde-well-known"] }
base64 = "0.22"

argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"
sha2 = "0.10"
rand = "0.8"

[features]
# 同 app:pg-conformance 开了才编译打真库的仓储一致性测试。
pg-conformance = []

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
