# idm —— 自包含的认证**领域/服务库**(零 HTTP:domain + service + repo + IdmError)。
# 被 app 当 lib 依赖(app 在自己的 features/auth 建 HTTP 边界);也能独立做 repo 一致性测试。迁移表见 migrations/。
[package]
name = "idm"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
description = "Self-contained auth / IDM domain & service library: AuthService + pluggable repos + its own IdmError. HTTP-agnostic — the consuming app owns routes, DTOs, validation and cookies."
license = "MIT"
repository = "https://github.com/GGGLHHH/rust-idm"
keywords = ["auth", "idm", "jwt", "authentication", "argon2"]
categories = ["authentication"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# serde:仅 JWT Claims 编解码用(无 HTTP / DTO 序列化)。
serde = { version = "1", features = ["derive"] }

thiserror = "2"
anyhow = "1"

sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "macros", "time", "migrate"] }
sea-query = "1.0"
sea-query-sqlx = { version = "0.9", default-features = false, features = ["sqlx-postgres", "runtime-tokio", "tls-rustls", "with-uuid", "with-time"] }
async-trait = "0.1"

uuid = { version = "1", features = ["v4", "v7", "serde"] }
time = { version = "0.3", features = ["serde-well-known"] }
base64 = "0.22"

argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"
sha2 = "0.10"
rand = "0.8"

[features]
# 同 app:pg-conformance 开了才编译打真库的仓储一致性测试。
pg-conformance = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
